Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96984

MediaPlayer example in Detailed Description is missing id

    XMLWordPrintable

Details

    • 6cb1b78921de3af329d6a5aae95599ee728788c5 (qt/qtmultimedia/dev) 69ded92cce1029ca9c8537b356da2a0d2b102aeb (qt/qtmultimedia/6.2)

    Description

      The MediaPlayer documentation is missing an id for the VideoOutput item. MediaPlayer is referencing an unknown VideoOutput.

      Item {
          MediaPlayer {
              id: mediaplayer
              source: "groovy_video.mp4"
              audioOutput: AudioOutput {}
              videoOutput: videoOutput
          }
      
          VideoOutput {
              anchors.fill: parent
          }
      
          MouseArea {
              id: playArea
              anchors.fill: parent
              onPressed: mediaplayer.play();
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            laknoll Lars Knoll
            henning Henning Gründl
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes