Fix QML snippet in docs

Add a missing id property in the snippet and remove
another one that's not being used.

Fixes: QTBUG-96984
Change-Id: I13d1c64fe72dc5fc9d50e2817e9df11d9148b3c5
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit 6cb1b78921de3af329d6a5aae95599ee728788c5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>